results/SVCOMP/4-shot/log-ExSymExe26-2024_03_18_19_26_17.txt
class Main {

  /*@ public normal_behavior
    @    ensures \result <==> test(x, y, z);
    @*/
  public static boolean f() {
    int a = 3;
    Main inst = new Main();
    int b = 8;
    return inst.test(a, b, a);
  }

  /*@ public normal_behavior
    @    requires true;
    @    ensures y == x && z == \old(z) + 1 ==> \result;
    @    ensures z <= 0 ==> !\result;
    @*/
  public boolean test(int x, int y, int z) {
    System.out.println("Testing ExSymExe26");
    y = x;
    z++;
    if (z > 0) System.out.println("branch FOO1");
    else {
      return false;
    }
    if (y > 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:4: error: cannot find symbol
    @    ensures \result <==> test(x, y, z);
                                   ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:4: error: cannot find symbol
    @    ensures \result <==> test(x, y, z);
                                      ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:4: error: cannot find symbol
    @    ensures \result <==> test(x, y, z);
                                         ^
  symbol:   variable z
  location: class Main
3 errors

